i was doing the voicenote list

--- a/Audio/package.json
+++ b/Audio/package.json
@@ -10,10 +10,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.28",
     "expo-status-bar": "~2.0.1",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-audio-recorder-player": "^3.6.12",
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-permissions": "^5.2.5",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
