--- a/Audio/package.json
+++ b/Audio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.28",
     "expo-status-bar": "~2.0.1",
     "moment": "^2.30.1",
